--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -224,6 +224,13 @@ config LOCKD_V4
 config EXPORTFS
 	tristate
 
+config EXPORTFS_FILE_LAYOUT
+	bool
+	depends on PNFSD && EXPORTFS
+	help
+	  Exportfs support for the NFSv4.1 files layout type.
+	  Must be automatically selected by supporting filesystems.
+
 config NFS_ACL_SUPPORT
 	tristate
 	select FS_POSIX_ACL
