--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -239,6 +239,17 @@ config EXPORTFS_OSD_LAYOUT
 	  Must be automatically selected by supporting osd
 	  filesystems.
 
+	  If unsure, say N.
+
+config EXPORTFS_BLOCK_LAYOUT
+	bool "Exportfs support for the pNFS blocks layout type"
+	depends on PNFSD && EXPORTFS
+	help
+	  Say Y here if you want exportfs support for the pNFS
+	  blocks layout type.
+
+	  If unsure, say N.
+
 config NFS_ACL_SUPPORT
 	tristate
 	select FS_POSIX_ACL
