--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -242,13 +242,12 @@ config EXPORTFS_OSD_LAYOUT
 	  If unsure, say N.
 
 config EXPORTFS_BLOCK_LAYOUT
-	bool "Exportfs support for the pNFS blocks layout type"
+	bool
 	depends on PNFSD && EXPORTFS
 	help
-	  Say Y here if you want exportfs support for the pNFS
-	  blocks layout type.
+	  Exportfs support for the NFSv4.1 blocks layout type.
+	  Must be automatically selected by supporting filesystems.
 
-	  If unsure, say N.
 
 config NFS_ACL_SUPPORT
 	tristate
